--- a/initial_notebook/heat_transfer_pilot.ipynb
+++ b/initial_notebook/heat_transfer_pilot.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 1,
       "metadata": {
         "id": "Chtq1q4Gp7EW"
       },
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 2,
       "metadata": {
         "id": "f32rrOdBu5dU"
       },
@@ -411,7 +411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 3,
       "metadata": {
         "id": "rpx08h616pf4"
       },
@@ -428,7 +428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -453,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -471,7 +471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 6,
       "metadata": {
         "id": "qFHjDJETC-8q"
       },
@@ -483,7 +483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 7,
       "metadata": {
         "id": "GxcNe6fEQI4t"
       },
@@ -496,7 +496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -509,10 +509,10 @@
         {
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7f133c11c490>]"
+              "[<matplotlib.lines.Line2D at 0x7fe6bbf68a60>]"
             ]
           },
-          "execution_count": 53,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -537,7 +537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 9,
       "metadata": {
         "id": "LP0Pyyp_QnMD"
       },
@@ -550,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 10,
       "metadata": {
         "id": "_OrvS4TwSbrj"
       },
@@ -561,7 +561,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -574,10 +574,10 @@
         {
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7f133c302490>]"
+              "[<matplotlib.lines.Line2D at 0x7fe72d34de80>]"
             ]
           },
-          "execution_count": 56,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -600,7 +600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 12,
       "metadata": {
         "id": "CNfICSTRTTAg"
       },
@@ -612,7 +612,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 13,
       "metadata": {
         "id": "dt55S_wqPA3s"
       },
